--- a/Depo/Depo/Presentation/CollectionViewCells/InstaPickHashtagCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/InstaPickHashtagCell.xib
@@ -12,29 +12,33 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="InstaPickHashtagCell" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="120" height="49"/>
+            <rect key="frame" x="0.0" y="0.0" width="124" height="49"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="120" height="49"/>
+                <rect key="frame" x="0.0" y="0.0" width="124" height="49"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wa2-WH-aXY">
-                        <rect key="frame" x="5" y="5" width="110" height="39"/>
+                        <rect key="frame" x="5" y="5" width="114" height="39"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wjV-eS-y4U">
-                                <rect key="frame" x="10" y="0.0" width="78" height="39"/>
+                                <rect key="frame" x="10" y="0.0" width="82" height="39"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfT-yt-eXX">
-                                <rect key="frame" x="80" y="4.5" width="30" height="30"/>
+                                <rect key="frame" x="84" y="4.5" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="WPl-lU-iFY"/>
                                     <constraint firstAttribute="width" constant="30" id="nWw-LZ-hp2"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <inset key="contentEdgeInsets" minX="11" minY="11" maxX="11" maxY="11"/>
                                 <state key="normal" image="iconCancelUnborder"/>
+                                <buttonConfiguration key="configuration" style="plain" image="iconCancelUnborder">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="18"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="onCloseTap:" destination="gTV-IL-0wX" eventType="touchUpInside" id="ukl-9u-3wS"/>
                                 </connections>
@@ -60,12 +64,12 @@
                 <constraint firstItem="Wa2-WH-aXY" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="lPf-Wb-Obg"/>
                 <constraint firstAttribute="trailing" secondItem="Wa2-WH-aXY" secondAttribute="trailing" constant="5" id="ozx-NH-BDr"/>
             </constraints>
-            <size key="customSize" width="120" height="49"/>
+            <size key="customSize" width="124" height="49"/>
             <connections>
                 <outlet property="hashtagLabel" destination="wjV-eS-y4U" id="q4l-iF-ki0"/>
                 <outlet property="shadowView" destination="Wa2-WH-aXY" id="puP-C1-LxS"/>
             </connections>
-            <point key="canvasLocation" x="112" y="47.226386806596707"/>
+            <point key="canvasLocation" x="115.2" y="47.226386806596707"/>
         </collectionViewCell>
     </objects>
     <resources>
