--- a/Depo/Depo/Presentation/UserStories/Grid/TrashBin/TrashBinViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Grid/TrashBin/TrashBinViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TrashBinViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="xTR-q8-L7x" id="cMb-Nv-k0k"/>
+                <outlet property="headerStackView" destination="1KQ-6x-oAi" id="Gik-S2-lc6"/>
                 <outlet property="sortPanelContainer" destination="JTJ-D6-NuD" id="oKm-Kz-hLq"/>
                 <outlet property="view" destination="fXz-TC-OPr" id="2f9-qs-6CN"/>
             </connections>
@@ -22,15 +23,20 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JTJ-D6-NuD">
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1KQ-6x-oAi" userLabel="HeaderStackView">
                     <rect key="frame" x="0.0" y="44" width="414" height="40"/>
-                    <color key="backgroundColor" name="primaryBackground"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="Oij-WM-XaE"/>
-                    </constraints>
-                </view>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JTJ-D6-NuD" userLabel="TapBarContainer">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="Oij-WM-XaE"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xTR-q8-L7x">
-                    <rect key="frame" x="0.0" y="92" width="414" height="770"/>
+                    <rect key="frame" x="0.0" y="84" width="414" height="778"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YHD-yH-pdZ">
                         <size key="itemSize" width="50" height="50"/>
@@ -43,13 +49,13 @@
             <viewLayoutGuide key="safeArea" id="wSL-CD-iq8"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="wSL-CD-iq8" firstAttribute="trailing" secondItem="JTJ-D6-NuD" secondAttribute="trailing" id="5v3-wZ-zPh"/>
-                <constraint firstItem="JTJ-D6-NuD" firstAttribute="leading" secondItem="wSL-CD-iq8" secondAttribute="leading" id="9ef-RY-KXU"/>
+                <constraint firstItem="1KQ-6x-oAi" firstAttribute="leading" secondItem="wSL-CD-iq8" secondAttribute="leading" id="Cpc-xk-GTf"/>
                 <constraint firstItem="wSL-CD-iq8" firstAttribute="trailing" secondItem="xTR-q8-L7x" secondAttribute="trailing" id="Hqa-Lz-yyT"/>
-                <constraint firstItem="JTJ-D6-NuD" firstAttribute="top" secondItem="wSL-CD-iq8" secondAttribute="top" id="PJu-t4-iCF"/>
                 <constraint firstItem="wSL-CD-iq8" firstAttribute="bottom" secondItem="xTR-q8-L7x" secondAttribute="bottom" id="TgJ-z5-hv2"/>
+                <constraint firstItem="xTR-q8-L7x" firstAttribute="top" secondItem="1KQ-6x-oAi" secondAttribute="bottom" id="gr0-OA-Hpx"/>
                 <constraint firstItem="xTR-q8-L7x" firstAttribute="leading" secondItem="wSL-CD-iq8" secondAttribute="leading" id="ibL-Eq-Zvn"/>
-                <constraint firstItem="xTR-q8-L7x" firstAttribute="top" secondItem="JTJ-D6-NuD" secondAttribute="bottom" constant="8" symbolic="YES" id="uoU-BL-qkP"/>
+                <constraint firstItem="1KQ-6x-oAi" firstAttribute="top" secondItem="wSL-CD-iq8" secondAttribute="top" id="org-8f-79R"/>
+                <constraint firstAttribute="trailing" secondItem="1KQ-6x-oAi" secondAttribute="trailing" id="ru0-Hn-d7J"/>
             </constraints>
             <point key="canvasLocation" x="139" y="134"/>
         </view>
